--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,6 +1,4 @@
-/*** Spinner Start ***/
-
-.rbc-toolbar button {
+** Spinner Start ** .rbc-toolbar button {
   pointer-events: auto !important;
   opacity: 1 !important;
 }
@@ -104,11 +102,11 @@
 /*** Topbar End ***/
 
 /*** Navbar Start ***/
-.navbar .navbar-nav .nav-link {
+/* .navbar .navbar-nav .nav-link {
   padding: 10px 15px;
   font-size: 16px;
   transition: 0.5s;
-}
+} */
 
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active,
@@ -127,7 +125,7 @@
 }
 
 @media (min-width: 1200px) {
-  .navbar .nav-item .dropdown-menu {
+  /* .navbar .nav-item .dropdown-menu {
     display: block;
     visibility: hidden;
     top: 100%;
@@ -136,7 +134,7 @@
     border: 0;
     transition: 0.5s;
     opacity: 0;
-  }
+  } */
 }
 
 .dropdown .dropdown-menu a:hover {
@@ -144,14 +142,14 @@
   color: var(--bs-primary);
 }
 
-.navbar .nav-item:hover .dropdown-menu {
+/* .navbar .nav-item:hover .dropdown-menu {
   transform: rotateX(0deg);
   visibility: visible;
   background: var(--bs-light) !important;
   border-radius: 10px !important;
   transition: 0.5s;
   opacity: 1;
-}
+} */
 
 @media (min-width: 1200px) {
   .navbar .navbar-collapse .border-top {
