--- a/client/src/assets/scss/page.scss
+++ b/client/src/assets/scss/page.scss
@@ -1,29 +1,29 @@
 @use "./variable.scss";
 
-// @font-face {
-//   font-family: 'Poppins';
-//   font-weight: 300;
-//   font-style: normal;
-//   src: url('../assets/fonts/FzPoppins/FZPoppins-Light.ttf') format('woff2');
-// }
+@font-face {
+    font-family: 'Poppins';
+    font-weight: 300;
+    font-style: normal;
+    src: url('../fonts/BeVietnamPro-Thin.ttf') format('woff2');
+}
 
-// @font-face {
-//   font-family: 'Poppins';
-//   font-weight: 400;
-//   font-style: normal;
-//   src: url('../assets/fonts/FzPoppins/FZPoppins-Regular.ttf') format('woff2');
-// }
+@font-face {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-style: normal;
+    src: url('../fonts/BeVietnamPro-Regular.ttf') format('woff2');
+}
 
-// @font-face {
-//   font-family: 'Poppins';
-//   font-weight: 500;
-//   font-style: normal;
-//   src: url('../assets/fonts/FzPoppins/FZPoppins-Medium.ttf') format('woff2');
-// }
+@font-face {
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-style: normal;
+    src: url('../fonts/BeVietnamPro-Medium.ttf') format('woff2');
+}
 
-// @font-face {
-//   font-family: 'Poppins';
-//   font-weight: 700;
-//   font-style: normal;
-//   src: url('../assets/fonts/FzPoppins/FZPoppins-Bold.ttf') format('woff2');
-// }
+@font-face {
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-style: normal;
+    src: url('../fonts/BeVietnamPro-Bold.ttf') format('woff2');
+}
