--- a/client/src/layouts/System/SystemLayout.module.scss
+++ b/client/src/layouts/System/SystemLayout.module.scss
@@ -19,10 +19,10 @@
   .content {
     position: relative;
     flex: 1;
-    background-color: #2c2c2c0a !important;
+    background-color: #f9fafb !important;
     transition: margin 0.2s linear;
     width: 100%;
-    padding: 2.375rem 0.375rem 2.375rem 2.375rem;
+    padding: 2.375rem 1rem 2.375rem 2.75rem;
     margin-top: 3rem;
   }
 }
