Update interface login, register, Field, Interface crud  doctor

--- a/client/src/assets/scss/variable.scss
+++ b/client/src/assets/scss/variable.scss
@@ -223,3 +223,11 @@
     background: linear-gradient(90deg, #667eea, #764ba2);
     border-radius: 3px;
 }
+
+.text-gray-500 {
+    color: #667085;
+}
+
+.cus-text-primary {
+    color: var(--color-accent) !important;
+}
