--- a/client/src/pages/Services/ServiceDetail/ServiceDetail.module.scss
+++ b/client/src/pages/Services/ServiceDetail/ServiceDetail.module.scss
@@ -192,3 +192,45 @@
         transition: transform 0.6s ease;
     }
 }
+
+
+.cusButtonGroup {
+    display: flex;
+    gap: 12px;
+
+    button {
+        flex: 1;
+        height: 45px;
+        border-radius: 8px;
+        font-weight: 600;
+    }
+
+    .outline {
+        background: transparent;
+        border: 2px solid #4b9460;
+        color: #4b9460;
+
+        &:hover {
+            background: #4b9460;
+            color: #fff;
+        }
+    }
+}
+
+.doctorItem {
+    transition: background-color 0.3s;
+    border-radius: 8px;
+    padding: 12px 12px;
+    margin: 10px 10px;
+
+    &:hover {
+        background-color: #f5f5f5;
+    }
+}
+
+.selectedDoctor {
+    background-color: #e6f4ff;
+    // border: 1px solid #1677ff;
+
+    padding: 12px 12px !important;
+}
