--- a/client/src/pages/Services/Services.module.scss
+++ b/client/src/pages/Services/Services.module.scss
@@ -361,7 +361,7 @@
 }
 
 .selectedDoctor {
-    background-color: #e6f4ff;
+    background-color: #aed2ed !important;
     // border: 1px solid #1677ff;
 
     padding: 12px 12px !important;
