--- a/client/src/components/CustomerOrdersCalendar/CustomerOrdersCalendar.module.scss
+++ b/client/src/components/CustomerOrdersCalendar/CustomerOrdersCalendar.module.scss
@@ -11,6 +11,12 @@
     }
 }
 
+:global(.rbc-day-slot .rbc-events-container) {
+    margin-right: 0 !important;
+}
+
+
+
 .modalContent {
     text-align: center;
 
