--- a/server/src/modules/mail/templates/new-voucher.hbs
+++ b/server/src/modules/mail/templates/new-voucher.hbs
@@ -102,15 +102,8 @@
           <strong>{{spaName}}</strong>.
         </p>
 
-        <ul>
-          {{#each services}}
-            <li><strong>{{this.name}}</strong> — {{this.price}}</li>
-          {{/each}}
-        </ul>
-
         <div class='info-box'>
-          <div><strong>Ngày sử dụng:</strong> {{usedDate}}</div>
-          <div><strong>Chuyên viên phục vụ:</strong> {{specialistName}}</div>
+          <div><strong>Hạn sử dụng đến:</strong> {{usedDate}}</div>
         </div>
 
         {{#if voucher}}
