Interface List doctor, Update header, Dashboard

--- a/client/src/layouts/Home/Header/Header.module.scss
+++ b/client/src/layouts/Home/Header/Header.module.scss
@@ -8,6 +8,16 @@
     height: auto;
 }
 
+.stickyHeader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+
+
 .nav-link {
     position: relative;
     text-decoration: none;
